--- a/styles.css
+++ b/styles.css
@@ -255,47 +255,47 @@ nav {
     }
 }
 
-/* TECH STACK */
+/* SKILLS STACK */
 
-.language__img {
+.skill__img {
     width: 100%;
     max-width: 100px;
     transition: all 300ms ease;
 }
-.language:hover .language__img {
+.skill:hover .skill__img {
     filter: brightness(80%);
     opacity: 0.86;
     transform: scale(0.9);
 }
 
-.language {
+.skill {
     width: 25%;
     display: flex;
     justify-content: center;
     position: relative;
 }
 
-.language__img--wrapper {
+.skill__img--wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 25px 16px;
 }
 
-.language__list {
+.skill__list {
     display: flex;
     width: 100%;
     flex-wrap: wrap;
 }
 
-.language__name {
+.skill__name {
     position: absolute;
     bottom: 0;
     transform: scale(0);
     transition: all 300ms;
     font-size: 20px;
 }
-.language:hover .language__name {
+.skill:hover .skill__name {
     transform: scale(1);
     opacity: 1;
 }
@@ -451,7 +451,7 @@ footer {
         font-size: 18px;
     }
 
-    .language {
+    .skill {
         width: calc(100% / 2)
     }
 
