Added Interest section and removed about me welcome picture.

--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,7 @@ nav {
 
 .personal__logo {
     font-size: 24px;
+    height: 30px;
     color: #008060;
     margin: 0 12px;
     font-weight: bold;
@@ -218,11 +219,11 @@ nav {
     }
 }
 
-.about-me__img--container {
+/* .about-me__img--container {
     flex: 1;
     display: flex;
     align-items: center;
-}
+} */
 
 .about-me__img {
     width: 100%;
@@ -296,6 +297,51 @@ nav {
     font-size: 20px;
 }
 .skill:hover .skill__name {
+    transform: scale(1);
+    opacity: 1;
+}
+
+/* INTERESTED SKILLS */
+
+.interest__img {
+    width: 100%;
+    max-width: 125px;
+    transition: all 300ms ease;
+}
+.interest:hover .interest__img {
+    filter: brightness(80%);
+    opacity: 0.86;
+    transform: scale(0.9);
+}
+
+.interest {
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.interest__img--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 16px;
+}
+
+.interest__list {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.interest__name {
+    position: absolute;
+    bottom: 0;
+    transform: scale(0);
+    transition: all 300ms;
+    font-size: 20px;
+}
+.interest:hover .interest__name {
     transform: scale(1);
     opacity: 1;
 }
