--- a/styles.css
+++ b/styles.css
@@ -130,11 +130,9 @@ nav {
 }
 
 .personal__logo {
-    font-size: 24px;
-    height: 30px;
-    color: #008060;
+    height: 80px;
+    width: 100px;
     margin: 0 12px;
-    font-weight: bold;
 }
 
 /* ABOUT ME */
@@ -165,7 +163,7 @@ nav {
     border-radius: 50%;
     overflow: hidden;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
-    margin-bottom: 28px;
+    margin-bottom: 36px;
     animation: animate-profile-picture 800ms 200ms backwards;
 }
 
@@ -190,11 +188,16 @@ nav {
 .about-me__info--title {
     margin-bottom: 16px;
     animation: fade-up 650ms 400ms backwards;
+    /* display: flex; */
 }
 .about-me__info--para {
     font-size: 18px;
     margin-bottom: 28px;
     animation: fade-up 650ms 400ms backwards;
+}
+
+.about-me__logo {
+    height: 90px;
 }
 
 .about-me__link {
@@ -254,6 +257,90 @@ nav {
     100% {
         transform: rotate(0);
     }
+}
+
+/* PROJECTS  */
+
+.project {
+    margin-bottom: 135px;
+}
+
+.project:last-child {
+    margin-bottom: 40px;
+}
+
+.project__img {
+    width: 100%;
+    transition: all 500ms ease;
+}
+
+.project__wrapper {
+    display: flex;
+    box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+}
+.project__wrapper:before {
+   content: "";
+   position: absolute;
+   top: 0;
+   left: 0;
+   height: 100%;
+   width: 100%;
+   background-color: #1c1d25;
+   opacity: 0;
+   transition: opacity 450ms ease;
+   z-index: 2;
+}
+.project:hover .project__wrapper:before {
+    opacity: 0.7;
+}
+.project:hover .project__img {
+    transform: scale(1.07);
+    filter: blur(5px);
+}
+
+.project__list {
+    padding-top: 40px;
+}
+
+.project:hover .project__description {
+    opacity: 1;
+    transform: translateY(-50%);
+}
+
+.project__description {
+    position: absolute;
+    top: 50%;
+    left: 90px;
+    transform: translateY(100%);
+    max-width: 550px;
+    z-index: 3;
+    opacity: 0;
+    transition: transform 450ms, opacity 300ms ease;
+}
+
+.project__description--title {
+    font-size: 40px;
+}
+
+.project__description--para {
+    margin: 16px 0;
+}
+
+.project__description--link {
+font-size: 20px;
+margin-right: 16px;
+text-decoration: none;
+}
+
+.project__description--title, 
+.project__description--sub-title,
+.project__description--para,
+.project__description--link {
+    text-align: left;
+    color: white;
 }
 
 /* INTERESTED SKILLS */
@@ -347,89 +434,6 @@ nav {
     opacity: 1;
 }
 
-/* PROJECTS  */
-
-.project {
-    margin-bottom: 135px;
-}
-
-.project:last-child {
-    margin-bottom: 40px;
-}
-
-.project__img {
-    width: 100%;
-    transition: all 500ms ease;
-}
-
-.project__wrapper {
-    display: flex;
-    box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
-    border-radius: 20px;
-    overflow: hidden;
-    position: relative;
-}
-.project__wrapper:before {
-   content: "";
-   position: absolute;
-   top: 0;
-   left: 0;
-   height: 100%;
-   width: 100%;
-   background-color: #1c1d25;
-   opacity: 0;
-   transition: opacity 450ms ease;
-   z-index: 2;
-}
-.project:hover .project__wrapper:before {
-    opacity: 0.7;
-}
-.project:hover .project__img {
-    transform: scale(1.07);
-    filter: blur(5px);
-}
-
-.project__list {
-    padding-top: 40px;
-}
-
-.project:hover .project__description {
-    opacity: 1;
-    transform: translateY(-50%);
-}
-
-.project__description {
-    position: absolute;
-    top: 50%;
-    left: 90px;
-    transform: translateY(100%);
-    max-width: 550px;
-    z-index: 3;
-    opacity: 0;
-    transition: transform 450ms, opacity 300ms ease;
-}
-
-.project__description--title {
-    font-size: 40px;
-}
-
-.project__description--para {
-    margin: 16px 0;
-}
-
-.project__description--link {
-font-size: 20px;
-margin-right: 16px;
-text-decoration: none;
-}
-
-.project__description--title, 
-.project__description--sub-title,
-.project__description--para,
-.project__description--link {
-    text-align: left;
-    color: white;
-}
 
 /* FOOTER  */
 
@@ -454,8 +458,9 @@ footer {
 }
 
 .footer__logo--img {
-    width: 120px;
+    width: 100px;
     height: 90px;
+    filter: invert(1)
 }
 
 .footer__social--link,
