--- a/styles.css
+++ b/styles.css
@@ -488,35 +488,172 @@ footer {
     opacity: 1;
 }
 
-/* Small phones, tablets, large smartphones */
+/* PROJECT 1 PAGE */
 
-@media (max-width: 768px) {
-    nav {
-        height: 68px;
+#project-virtualbox {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.project-virtualbox__info {
+    display: flex;
+    flex-direction: column;
+}
+
+.project-virtualbox__info--container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.project-virtualbox__picture--mask {
+    /* width: 100px;
+    height: 100px; */
+    overflow: hidden;
+    box-shadow: 0 20px 80px rgba(0, 0, 0, 0.16);
+    border-radius: 12px;
+    margin-bottom: 36px;
+    animation: animate-profile-picture 800ms 200ms backwards;
+}
+
+@keyframes animate-profile-picture {
+    0% {
+        transform: scale(0);
     }
-
-    h1 {
-        font-size: 28px;
+    80% {
+        transform: scale(1.1);
     }
-
-    .about-me__info--para {
-        font-size: 18px;
-    }
-
-    .skill {
-        width: calc(100% / 2)
-    }
-
-    .project__description--para {
-        font-size: 14px;
-    }
-
-    .project__description {
-        left: 30px;
-        padding-right: 30px
+    100% {
+        transform: scale(1);
     }
 }
 
+.project-virtualbox__picture {
+    width: 100%;
+    transform: scale(1.2);
+    padding: 8px;
+}
+
+.project-virtualbox__info--title {
+    margin-bottom: 20px;
+    animation: fade-up 650ms 400ms backwards;
+}
+
+.project-virtualbox__info--subtitle {
+    margin-bottom: 16px;
+    animation: fade-up 650ms 400ms backwards;
+}
+
+.project-virtualbox__info--para {
+    font-size: 18px;
+    margin-bottom: 28px;
+    animation: fade-up 650ms 400ms backwards;
+}
+
+.project-virtualbox__logo {
+    height: 90px;
+}
+
+.project-virtualbox__link {
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
+    padding: 0 16px;
+}
+
+.project-virtualbox__links {
+    animation: fade-up 650ms 400ms backwards;
+}
+
+@keyframes fade-up {
+    0% {
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* .about-me__img--container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+} */
+
+.project-virtualbox__img {
+    width: 100%;
+    animation: fade-in 1200ms 800ms backwards;
+}
+
+.project-virtualbox__keyfeatures {
+    /* display: flex; */
+    margin-bottom: 50px;
+    animation: fade-up 650ms 400ms backwards;
+}
+
+.project-virtualbox__keyfeature {
+   margin-bottom: 20px;
+   animation: fade-up 650ms 400ms backwards;
+}
+
+/* FOOTER  */
+
+footer {
+    background-color: #242424;
+}
+
+.footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 8% 0;
+}
+
+.footer__social--list {
+    width: 100%;
+    max-width: 600px;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 28px;
+}
+
+.footer__logo--img {
+    width: 100px;
+    height: 90px;
+    filter: invert(1)
+}
+
+.footer__social--link,
+.footer__copyright {
+    color: white;
+}
+
+.footer__logo--popper {
+    color: white;
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.footer__anchor {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+    transform: translateX(60px); 
+    opacity: 1;
+}
 
 /* SMALL PHONES */
 
@@ -544,6 +681,7 @@ footer {
         font-size: 32px;
         line-height: 1;
         text-align: center;
+        margin-bottom: 8px;
     }
 
     .project__description--sub-title {
@@ -551,4 +689,3 @@ footer {
         margin: 12px 0;
     }
 }
-
