--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,8 @@ nav {
 
 .about-me__info {
     display: flex;
-    flex-direction: column;
+    margin-top: 64px;
+    /* flex-direction: column; */
 }
 
 .about-me__info--container {
@@ -191,7 +192,7 @@ nav {
     /* display: flex; */
 }
 .about-me__info--para {
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 28px;
     animation: fade-up 650ms 400ms backwards;
 }
@@ -260,6 +261,29 @@ nav {
 }
 
 /* PROJECTS  */
+
+.project__hover-effect:after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 0%;
+    bottom: -3px;
+    right: 0;
+    transition: all 300ms ease;
+}
+
+.project__hover-effect--white:after {
+    background-color: white;
+}
+
+.project__hover-effect--black:after {
+    background-color: white;
+}
+
+.project__hover-effect:hover:after {
+    width: 100%;
+    left: 0;
+}
 
 .project {
     margin-bottom: 135px;
@@ -586,6 +610,7 @@ footer {
 .project-virtualbox__info--title {
     margin-bottom: 20px;
     animation: fade-up 650ms 400ms backwards;
+    color: #008060;
 }
 
 .project-virtualbox__info--subtitle {
